--- a/view/Insert.html
+++ b/view/Insert.html
@@ -12,6 +12,18 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="http://localhost/projetos/CRUD/view/select.php">Filmes Hirooka</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="Select.php">Home<span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="container">
 
         <h1>Adicionar Filme</h1>
